--- a/AngryWasp.Build.Common.targets
+++ b/AngryWasp.Build.Common.targets
@@ -12,14 +12,14 @@
         <DefineConstants>$(DefineConstants);WINDOWS;</DefineConstants>
     </PropertyGroup>
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.1;net6.0;net7.0</TargetFrameworks>
+        <TargetFramework>net7.0</TargetFramework>
         <PlatformTarget>AnyCPU</PlatformTarget>
         <LangVersion>latest</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <GenerateFullPaths>true</GenerateFullPaths>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <TrimUnusedDependencies>true</TrimUnusedDependencies>
-        <AppendTargetFrameworkToOutputPath>true</AppendTargetFrameworkToOutputPath>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
         <OutputPath>$(SolutionDir)../Bin/Binaries</OutputPath>
         <LangVersion>latest</LangVersion>
